AA-2002-01-23-1: Feature:  Security:
                           - fallback key/cert paths
                           - removed gsd.refresh_time debug message

CR-2002-01-23-1: Testsuite: - new procedure: close_open_rlogin_sessions()
                 Enhancem.: - closing all rlogin sessions on TCL error
                            - send CTRL + C on each close_spawn_process() call
                              to stop evtl. running applications at remote host          
                            
CR-2002-01-23-0: Testsuite: - updated resolve_version for SGE(EE) 5.3beta2
                            - bugfix for SGE installation (install_core_system)

AA-2002-01-23-0: Feature:  Security:
                           - change of cert/key paths
                           - sge_security_ck_to_do() added
                             kerberos and CSP sec funcs now in module
                             libs/gdi/sge_security.c
                           - clearance of connectionlist changed

CR-2002-01-22-0: Testsuite: - install_core_system check will now use default
                              values for most all cluster configuration setup 
                              and report configuration changes through sge_inst 
                              script
                            - re_init cluster after tcl_error will now restore
                              cluster configuration for most parameters


JG-2002-01-22-0: Bugfix:    Tight integration using the mpi scripts: 
                            starting a task from within a task failed, as the 
                            environment variable TASK_ID was exported to the 
                            second level qrsh call and qrsh tried to allocate
                            this TASK_ID a second time.

CR-2002-01-21-1: Testsuite: - setup checking length of product_root_directory
                            - setting default load_thresholds to "np_load_avg=11.00"